0.16/_sources/auto_tutorials/plot_sensors_time_frequency.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_auto_tutorials_plot_sensors_time_frequency.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_tutorials_plot_sensors_time_frequency.py:


.. _tut_sensors_time_frequency:

=============================================
Frequency and time-frequency sensors analysis
=============================================

The objective is to show you how to explore the spectral content
of your data (frequency and time-frequency). Here we'll work on Epochs.

We will use the somatosensory dataset that contains so-called
event related synchronizations (ERS) / desynchronizations (ERD) in
the beta band.



.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt

    import mne
    from mne.time_frequency import tfr_morlet, psd_multitaper
    from mne.datasets import somato







Set parameters



.. code-block:: python

    data_path = somato.data_path()
    raw_fname = data_path + '/MEG/somato/sef_raw_sss.fif'

    # Setup for reading the raw data
    raw = mne.io.read_raw_fif(raw_fname)
    events = mne.find_events(raw, stim_channel='STI 014')

    # picks MEG gradiometers
    picks = mne.pick_types(raw.info, meg='grad', eeg=False, eog=True, stim=False)

    # Construct Epochs
    event_id, tmin, tmax = 1, -1., 3.
    baseline = (None, 0)
    epochs = mne.Epochs(raw, events, event_id, tmin, tmax, picks=picks,
                        baseline=baseline, reject=dict(grad=4000e-13, eog=350e-6),
                        preload=True)

    epochs.resample(150., npad='auto')  # resample to reduce computation time







Frequency analysis
------------------

We start by exploring the frequence content of our epochs.


Let's first check out all channel types by averaging across epochs.



.. code-block:: python

    epochs.plot_psd(fmin=2., fmax=40.)




.. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_001.png
    :class: sphx-glr-single-img




Now let's take a look at the spatial distributions of the PSD.



.. code-block:: python

    epochs.plot_psd_topomap(ch_type='grad', normalize=True)




.. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_002.png
    :class: sphx-glr-single-img




Alternatively, you can also create PSDs from Epochs objects with functions
that start with ``psd_`` such as
:func:`mne.time_frequency.psd_multitaper` and
:func:`mne.time_frequency.psd_welch`.



.. code-block:: python


    f, ax = plt.subplots()
    psds, freqs = psd_multitaper(epochs, fmin=2, fmax=40, n_jobs=1)
    psds = 10. * np.log10(psds)
    psds_mean = psds.mean(0).mean(0)
    psds_std = psds.mean(0).std(0)

    ax.plot(freqs, psds_mean, color='k')
    ax.fill_between(freqs, psds_mean - psds_std, psds_mean + psds_std,
                    color='k', alpha=.5)
    ax.set(title='Multitaper PSD (gradiometers)', xlabel='Frequency',
           ylabel='Power Spectral Density (dB)')
    plt.show()




.. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_003.png
    :class: sphx-glr-single-img




Time-frequency analysis: power and inter-trial coherence
-------------------------------------------------------

We now compute time-frequency representations (TFRs) from our Epochs.
We'll look at power and inter-trial coherence (ITC).

To this we'll use the function :func:`mne.time_frequency.tfr_morlet`
but you can also use :func:`mne.time_frequency.tfr_multitaper`
or :func:`mne.time_frequency.tfr_stockwell`.



.. code-block:: python


    # define frequencies of interest (log-spaced)
    freqs = np.logspace(*np.log10([6, 35]), num=8)
    n_cycles = freqs / 2.  # different number of cycle per frequency
    power, itc = tfr_morlet(epochs, freqs=freqs, n_cycles=n_cycles, use_fft=True,
                            return_itc=True, decim=3, n_jobs=1)







Inspect power
-------------

.. note::
    The generated figures are interactive. In the topo you can click
    on an image to visualize the data for one sensor.
    You can also select a portion in the time-frequency plane to
    obtain a topomap for a certain time-frequency region.



.. code-block:: python

    power.plot_topo(baseline=(-0.5, 0), mode='logratio', title='Average power')
    power.plot([82], baseline=(-0.5, 0), mode='logratio', title=power.ch_names[82])

    fig, axis = plt.subplots(1, 2, figsize=(7, 4))
    power.plot_topomap(ch_type='grad', tmin=0.5, tmax=1.5, fmin=8, fmax=12,
                       baseline=(-0.5, 0), mode='logratio', axes=axis[0],
                       title='Alpha', vmax=0.45, show=False)
    power.plot_topomap(ch_type='grad', tmin=0.5, tmax=1.5, fmin=13, fmax=25,
                       baseline=(-0.5, 0), mode='logratio', axes=axis[1],
                       title='Beta', vmax=0.45, show=False)
    mne.viz.tight_layout()
    plt.show()




.. rst-class:: sphx-glr-horizontal


    *

      .. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_004.png
            :class: sphx-glr-multi-img

    *

      .. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_005.png
            :class: sphx-glr-multi-img

    *

      .. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_006.png
            :class: sphx-glr-multi-img




Joint Plot
----------
You can also create a joint plot showing both the aggregated TFR
across channels and topomaps at specific times and frequencies to obtain
a quick overview regarding oscillatory effects across time and space.



.. code-block:: python


    power.plot_joint(baseline=(-0.5, 0), mode='mean', tmin=-.5, tmax=2,
                     timefreqs=[(.5, 10), (1.3, 8)])




.. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_007.png
    :class: sphx-glr-single-img




Inspect ITC
-----------



.. code-block:: python

    itc.plot_topo(title='Inter-Trial coherence', vmin=0., vmax=1., cmap='Reds')




.. image:: /auto_tutorials/images/sphx_glr_plot_sensors_time_frequency_008.png
    :class: sphx-glr-single-img




.. note::
    Baseline correction can be applied to power or done in plots.
    To illustrate the baseline correction in plots, the next line is
    commented power.apply_baseline(baseline=(-0.5, 0), mode='logratio')


Exercise
--------

   - Visualize the inter-trial coherence values as topomaps as done with
     power.


**Total running time of the script:** ( 0 minutes  33.899 seconds)


.. _sphx_glr_download_auto_tutorials_plot_sensors_time_frequency.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_sensors_time_frequency.py <plot_sensors_time_frequency.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_sensors_time_frequency.ipynb <plot_sensors_time_frequency.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
